--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,32 @@
 cmake_minimum_required(VERSION 3.13)
 
-# initialize the SDK directory
 include (/code/pico/pico-sdk/pico_sdk_init.cmake)
 
-project(my_project)
+project(lab13-3 C CXX ASM)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
-# initialize the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-# rest of your project
+add_executable(${PROJECT_NAME}
+	main.c
+	usb-desc.c
+)
 
-add_executable(usbled)
+target_include_directories(${PROJECT_NAME} PRIVATE
+	${CMAKE_CURRENT_LIST_DIR}
+)
 
-target_sources(usbled PUBLIC
-        ${CMAKE_CURRENT_LIST_DIR}/main.c
-        ${CMAKE_CURRENT_LIST_DIR}/usb_descriptors.c
-        )
+target_link_libraries(${PROJECT_NAME}
+	tinyusb_device
+	tinyusb_board
+	pico_stdlib
+)
 
-# Make sure TinyUSB can find tusb_config.h
-target_include_directories(usbled PUBLIC
-        ${CMAKE_CURRENT_LIST_DIR})
+# Output to uart only
+pico_enable_stdio_usb(${PROJECT_NAME} 0)
+pico_enable_stdio_uart(${PROJECT_NAME} 1)
 
-# Add pico_stdlib library with aggregates commonly used features
-#target_link_libraries(usbled pico_stdlib)
-target_link_libraries(usbled PUBLIC pico_stdlib tinyusb_device tinyusb_board)
-#target_link_libraries(dev_hid_composite PUBLIC pico_stdlib pico_unique_id tinyusb_device tinyusb_board)
+# Additional output files
+pico_add_extra_outputs(${PROJECT_NAME})
 
-
-
-# create map/pin/uf2 file in addition to ELF.
-pico_add_extra_outputs(usbled)
